<resources>
    <string name="app_name">Assigment_1</string>
    <string name="from">from</string>
    <string name="SMD">SMD</string>
    <string name="Socially">Socially</string>
    <string name="sign_up">Create An Account and Sign Up</string>
    <string name="Username">Username</string>
    <string name="Name">Your Name</string>
    <string name="Last_name">Your Last name</string>
    <string name="Date">Date of Birth</string>
    <string name="email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Sign_in_button">Create an Account</string>
    <string name="Jacob_w">Jacob_w</string>
    <string name="login">Log in</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="Dont_have_an_account">Dont have an account?</string>
    <string name="SignIn">Sign up</string>
    <string name="OR">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username_hint">Username</string>
    <string name="josh">Joshua_I</string>
    <string name="japan">Tokyo,Japan</string>
    <string name="game"> The game in Japan was amazing and I want to share some photos</string>
    <string name="your_story">Your Story</string>
    <string name="karenne">karenne</string>
    <string name="zackjohn">zackjohn</string>
    <string name="kieron_d">kieron_d"</string>
    <string name="liked_by">Liked by <b>craig_love</b> and <b>44,686 others</b></string>
    <string name="search">Search</string>
    <string name="shop">Shop</string>
    <string name="style">Style</string>
    <string name="sport">Sport</string>
    <string name="auto">Auto</string>
    <string name="music">Music</string>
    <string name="clear">Clear</string>
    <string name="Top">Top</string>
    <string name="Places">Places</string>
    <string name="Tags">Tags</string>
    <string name="Accounts">Accounts</string>
    <string name="internshala">internshala</string>
    <string name="internshala_2">#internshala</string>
    <string name="posts">1000+ post</string>
    <string name="nice_day">Have a nice day, bro!</string>
    <string name="now_1">· now</string>
    <string name="Camera">Camera</string>
    <string name="Message...">Message…"</string>
    <string name="Hello">Hello</string>
    <string name="time">4:49 PM</string>
    <string name="Mom">Mother ❤️</string>
    <string name="following">Following</string>
    <string name="you">You</string>
    <string name="karen_like"><b>karennne</b> liked 3 posts.<font color='#A5A5A5'>3h</font> </string>
    <string name="kiero_like"><b>kiero_d</b>, <b>zackjohn</b> and <b>craig_love</b> liked <b>joshua_l </b> post <font color='#A5A5A5'>3h</font>  </string>
    <string name="kiero_follow"><b>kiero_d</b> started following </string>
    <string name="craig_like"><b>craig_love</b> liked 8 posts.<font color='#A5A5A5'>3h</font> </string>
    <string name="maxzac_like"><b>maxjacobson</b> and <b>zackjohn liked <b>mis_potter</b>’s post.</b><font color='#A5A5A5'>3h</font>  </string>
    <string name="maxcraig_like"><b>maxjacobson</b> and <b>craig_love liked <b>martini_rond</b>’s post. </b><font color='#A5A5A5'>3h</font></string>
    <string name="karen_comment"><b>karennne</b> liked <b>martini_rond</b>s</string>
    <string name="max_like"><b>maxjacobson</b> liked 3 posts.<font color='#A5A5A5'>3h</font> </string>
    <string name="kraig"> <b>craig_love.</b><font color='#A5A5A5'>3h</font></string>
    <string name="karen_comment2">comment: <font color='#3b5998'>@martini_rond</font> Nice!<font color='#A5A5A5'>3h</font> </string>
    <string name="Follow_request">Follow Requests</string>
    <string name="karenne_4"><b>karennne</b>liked your photo.<font color='#A5A5A5'>1h</font> </string>
    <string name="New">New</string>
    <string name="Today">Today</string>
    <string name="multiple_likes"><b>Kiero_d</b>, <b>zackjohn</b> and <b>26 others</b> liked your photo.<font color='#A5A5A5'>3h</font> </string>
    <string name="This_Week">This Week</string>
    <string name="mention"><b>craig_love</b> mentioned you in a comment:  <font color='#3b5998'>@jacob_w</font> exactly... <font color='#A5A5A5'>2d</font></string>
    <string name="like_reply">♡︎   Reply</string>
    <string name="message_2">Message</string>
    <string name="martini_follow"><b>martini_rond</b> started following you.<font color='#A5A5A5'>3d</font> </string>
    <string name="max_follow"><b>maxjacobson</b> started following you.<font color='#A5A5A5'>3d</font> </string>
     <string name="follow_3">Follow</string>
     <string name="This_Month">This Month</string>
    <string name="Highlight"><b>Highlight</b> <font color="#80C0C0C0">December 3,2023</font></string>
    <string name="Artist"><b>Artist.</b> Song Title </string>
    <string name="Activity">Activity</string>
    <string name="Create">Create</string>
    <string name="Create_Post">Create Post</string>
    <string name="Browse">Browse</string>
    <string name="Send">Send</string>
    <string name="More">More</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="done">Done</string>
    <string name="change_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="switch_account">Switch to Professional Account</string>
    <string name="private_info">Private Information</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="sample_name">Jacob West</string>
    <string name="sample_username">jacob_w</string>
    <string name="sample_website">Website</string>
    <string name="sample_bio">Digital goodies designer<font color="#795D5E">@pixsells</font> <br/>Everything is designed.</string>
    <string name="sample_email">jacob.west@gmail.com</string>
    <string name="sample_phone">+1 202 555 0147</string>
    <string name="sample_gender">Male</string>
    <string name="label_username">Username</string>
    <string name="label_website">Website</string>
    <string name="Bio">Bio</string>
    <string name="Recents">Recents</string>
    <string name="Next">Next</string>
    <string name="Library">Library</string>
    <string name="Photo">Photo</string>
    <string name="Video">Video</string>
    <string name="infinity">∞</string>
    <string name="select_multiple">SELECT MULTIPLE</string>
    <string name="Type">TYPE</string>
    <string name="Live">LIVE</string>
    <string name="Normal">NORMAL</string>
    <string name="Bome">BOOMERANG</string>
    <string name="Super_2">SUPER2</string>
    <string name="Story_name"><b>craig_love</b><font color='#A5A5A5'> 4h</font> </string>
    <string name="Gursk">gursky.studio</string>
    <string name="hours">11h</string>
    <string name="Facebook">Facebook</string>
    <string name="Highlight_">Highlight</string>
    <string name="Kyan"><b>kyan.coleman</b></string>
    <string name="Name_">Kyan Coleman</string>
    <string name="no_1">151</string>
    <string name="posts_">posts</string>
    <string name="no_2">112k</string>
    <string name="followers">followers</string>
    <string name="no_3">162</string>
    <string name="following_">following</string>
    <string name="Description"><font color='#A5A5A5'>Blogger</font> </string>
   <string name="co">kyan.co</string>
    <string name="Description_2">Sample Text Sample Text Sample Test Sample Test Sample Test Sample Test Sample Test Sample Test Sample Test Sample Test  Sample Test ...<font color='#A5A5A5'>more</font> </string>
    <string name="Followed_by">Followed by <b>your friend,another friend</b> and <b>297 others</b></string>
    <string name="Mail">Email</string>
    <string name="H_1">Highlight 1</string>
    <string name="H_2">Highlight 2</string>
    <string name="H_3">Highlight 3</string>
    <string name="H_4">Highlight 4</string>
    <string name="new_">New </string>
    <string name="sample_bio_2">Digital goodies designer<font color="#1F4468">@pixsells</font> \nEverything is designed.</string>
    <string name="H_1_">Friends</string>
    <string name="H_2_">Sport</string>
    <string name="H_3_">Design</string>

</resources>