<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <ImageView
        android:id="@+id/home_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/status_bar_black"
        >
    </ImageView>
    <RelativeLayout
        android:id="@+id/image"
        android:layout_below="@id/home_bar"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/box_9"
        >
        <ImageView
            android:id="@+id/middle_i"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image8"
            >
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/gear"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            >
        </ImageView>
        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/right"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            >
        </ImageView>
        <RelativeLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >
            <RelativeLayout
                android:id="@+id/pic"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/box11"
                    >
                </ImageView>
            </RelativeLayout>
            <ImageView
                android:id="@+id/flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/pic"
                android:layout_marginStart="20dp"
                android:background="@drawable/flash"
                >
            </ImageView>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/capture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@color/white"
                app:civ_border_width="10dp"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@color/light_grey">
            </de.hdodenhof.circleimageview.CircleImageView>
            <ImageView
                android:id="@+id/loop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/capture"
                android:layout_marginStart="20dp"
                android:background="@drawable/loop"
                >
            </ImageView>
            <ImageView
                android:id="@+id/sticker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/loop"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"

                android:background="@drawable/sticker_2"
                >
            </ImageView>
        </RelativeLayout>
    </RelativeLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/home_indicator"
        android:layout_below="@id/image"

        >
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginStart="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/Type"

            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/Live"

            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/Normal"

            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/Bome"

            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/Super_2"

            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/Bome"

            >
        </TextView>

    </LinearLayout>
    </HorizontalScrollView>
    <ImageView
        android:id="@+id/home_indicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/home_indicator">
    </ImageView>

</RelativeLayout>