<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/home_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/status_bar_black"
        >
    </ImageView>
    <LinearLayout

        android:id="@+id/main_i"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_bar"
        android:weightSum="10"
        >
        <RelativeLayout
            android:id="@+id/i"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/box_9"
            >

            <ImageView
                android:id="@+id/main_image"
                android:background="@drawable/image8_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            </ImageView>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                >
                <LinearLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grabber"
                        >
                    </ImageView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grabber"
                        >
                    </ImageView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grabber"
                        >
                    </ImageView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grabber"
                        >
                    </ImageView>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grabber"
                        >
                    </ImageView>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/top_bar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/tabs"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/profile_image"
                        app:civ_border_width="1dp"
                        app:civ_border_color="@color/white">
                    </de.hdodenhof.circleimageview.CircleImageView>

                    <RelativeLayout
                        android:id="@+id/story_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/profile_pic"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/story_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Highlight"
                            android:textSize="14sp"
                            android:textColor="@color/white">
                        </TextView>

                        <ImageView
                            android:id="@+id/music_w"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/soundwave"
                            android:layout_below="@id/story_name"
                            >
                        </ImageView>
                        <TextView
                            android:id="@+id/story_music"
                            android:layout_below="@id/story_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Artist"
                            android:layout_marginStart="3dp"
                            android:layout_toEndOf="@id/music_w"
                            android:textSize="12sp"
                            android:textColor="@color/light_grey">
                        </TextView>
                        <ImageView
                            android:id="@+id/music_n"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/next"
                            android:layout_below="@id/story_name"
                            android:layout_toEndOf="@id/story_music"

                            >
                        </ImageView>
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/music_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal">



                        <ImageView
                            android:id="@+id/music_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/close"
                            android:textSize="12sp"
                         >
                        </ImageView>
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="horizontal"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/activity">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Activity"
                android:textColor="@color/white"
                android:textSize="10sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/reels">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Create"
                android:textColor="@color/white"
                android:textSize="10sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/create_post">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Create_Post"
                android:textColor="@color/white"
                android:textSize="10sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/browse">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Browse"
                android:textColor="@color/white"
                android:textSize="10sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/share_brown">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Send"
                android:textColor="@color/white"
                android:textSize="10sp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/options_brown">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/More"
                android:textColor="@color/white"
                android:textSize="10sp">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>